# unc-ai-surveillance-system-server

./: .env  Cargo.toml  Dockerfile  README.md  api_docs.yml  docker-compose.yml  exchange.json  lldb-server-start.sh  postman_request.json  server-config.yaml
.github/workflows/: rust.yml
migrations/2022-10-04-145119_create_users/: up.sql
migrations/2022-10-07-233240_create_sessions/: up.sql
migrations/2022-10-20-045452_create_violators/: down.sql  up.sql
migrations/2022-10-25-095720_setup_schema/: down.sql  up.sql
src/: actor.rs  app_state.rs  main.rs  notifier.rs  safe_multicast.rs  schema.rs  server_config.rs  surveillance.rs  tests.rs
src/data/: app_data.rs  mod.rs
src/dnn/: context.rs  mod.rs
src/logging/: log_level.rs  log_recorder.rs  loggable.rs  loggable_error.rs  loggable_response_error.rs  logger.rs  mod.rs  server_error.rs
src/media/: camera.rs  frame.rs  mod.rs  surveillance.rs  video_manager.rs
src/models/: area.rs  category.rs  claims.rs  device_os.rs  device_signature.rs  into_model.rs  jwt_claims.rs  mod.rs  password_hash.rs  session.rs  user.rs  user_claims.rs  user_role.rs  violation.rs  violation_kind.rs
src/routes/: areas.rs  logs.rs  mod.rs  socket.rs  users.rs  violations.rs  vstream.rs
src/traits/: from_hexadecimal.rs  mod.rs  to_hexadecimal.rs  with_seperator.rs
