[package]
name = "unc-ai-surveillance-system-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21.0"
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["postgres"] }
base64 = "0.13.0"
just-argon2 = "1.2.0"